Bug 81491 - FILEOPEN: File crashes while opening in LibreOffice
Summary: FILEOPEN: File crashes while opening in LibreOffice
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium normal
Assignee: Vinaya Mandke
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-18 10:07 UTC by bisal.nayal
Modified: 2014-09-01 08:30 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Original file containing the crash. (696.80 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-18 10:07 UTC, bisal.nayal
Details
This is the optimized file created from the original file (85.09 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-18 10:10 UTC, bisal.nayal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bisal.nayal 2014-07-18 10:07:29 UTC
Created attachment 103029 [details]
Original file containing the crash.

Problem description: 

Steps to reproduce:
1. Open the File in LO.
2. LO crashes.


Current behavior:
1) The file crashes.

Expected behavior:
1) File should not crash.

              
Operating System: Ubuntu
Version: 4.4.0.0.alpha0+ Master
Comment 1 bisal.nayal 2014-07-18 10:08:54 UTC
The issue is an assert check which fails at the following position.

Program received signal SIGABRT, Aborted.
0x00007ffff74b5f79 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
56	../nptl/sysdeps/unix/sysv/linux/raise.c: No such file or directory.
#4  0x00007fffa19f570e in SwIndexReg::~SwIndexReg (this=0x7fffb87bc250, __in_chrg=<optimized out>) at /home/synerzip/core/sw/source/core/bastyp/index.cxx:236
236	    assert(!m_pFirst && !m_pLast); // There are still indices registered
Comment 2 bisal.nayal 2014-07-18 10:10:13 UTC
Created attachment 103030 [details]
This is the optimized file  created from the original file
Comment 3 Jorendc 2014-07-18 15:21:39 UTC
Synerzip -> NEW
Comment 4 Commit Notification 2014-08-01 10:01:04 UTC
Vinaya Mandke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9a733398516b7ee08ad5b3887c75f11f0f6bbc27

fdo#81491 FILEOPEN DOCX Assert Fails while Deleting Para (FramePr)



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Jorendc 2014-09-01 08:30:20 UTC
Fix applied + Unit test -> RESOLVED FIXED